# trtcheck

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  OVERNIGHT_REPORT.md  PR_BODY_DRAFT.md  PUBLIC_RELEASE_REPORT.md  README.md  REAL_TENSORRT_VALIDATION_REPORT.md  RELEASE_NOTES_DRAFT.md  RELEASE_READINESS_REPORT.md  SCORECARD.md  SECURITY.md  SECURITY_REVIEW.md  action.yml  mkdocs.yml  pyproject.toml  raw_trtcheck.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  bug.yml  config.yml  feature.md  feature.yml
.github/workflows/: ci.yml  docs.yml  matrix-drift.yml  release.yml  selftest.yml
action/: diff_changed_files.sh  post_comment.py  render_comment.py  run.sh
bench/: README.md  fetch.py  manifest.yaml  outcomes.json  predict.py  real_tensorrt_smoke_results.json  score.py  summary.json
docs/: fixers.md  index.md  install.md  rules.md  security-model.md  usage.md
docs/case-studies/: uint8-input.md
docs/design/: analysis-verdicts-and-fix-safety.md  plugin-sdk.md
docs/evidence/: scorecard.md  tensorrt-10.3-smoke.md
docs/operators/: Abs.md  Add.md  And.md  ArgMax.md  ArgMin.md  AveragePool.md  BatchNormalization.md  Cast.md  Clip.md  Concat.md  Constant.md  ConstantOfShape.md  Conv.md  ConvTranspose.md  DepthToSpace.md  DequantizeLinear.md  Det.md  Div.md  Dropout.md  Elu.md  Equal.md  Exp.md  Expand.md  EyeLike.md  Gather.md  GatherElements.md  GatherND.md  Gelu.md  Gemm.md  GlobalAveragePool.md  GlobalMaxPool.md  Greater.md  (+70 more)
examples/trtcheck-extra-fixers/: README.md  pyproject.toml
examples/trtcheck-extra-fixers/src/trtcheck_extras/: __init__.py
examples/trtcheck-extra-fixers/src/trtcheck_extras/fixers/: __init__.py  strip_identity.py
scripts/: package-smoke.sh  real-smoke-container.sh  real_tensorrt_smoke.py  run-tests.sh
tests/: conftest.py  test_action_post_comment.py  test_action_render_comment.py  test_analyzer.py  test_analyzer_edge.py  test_bench_fetch.py  test_bench_manifest.py  test_bench_predict.py  test_bench_score.py  test_benchmark.py  test_checkers_control_flow.py  test_checkers_dynamic_extra.py  test_checkers_dynamic_shapes.py  test_checkers_graph_structure.py  test_checkers_operator_support.py  test_checkers_precision.py  test_checkers_precision_extra.py  test_checkers_subgraph.py  test_cli.py  test_cli_fix.py  test_cli_robustness.py  test_conditions.py  test_data_files.py  test_doc_generator.py  test_entry_points.py  test_fixers_dropout.py  test_fixers_float64.py  test_fixers_int64.py  test_fixers_int64_schema.py  test_fixers_roundtrip.py  test_fixers_subgraph.py  test_fixers_transactional.py  test_fixers_uint8.py  test_fixers_upsample.py  test_generators_sync.py  test_graph_traversal.py  test_matrix_drift.py  test_packaging.py  test_plugin_discovery.py  test_plugin_execution.py  (+8 more)
tools/: build_operator_docs.py  build_operator_matrix.py  check_matrix_drift.py  validate_bench_manifest.py
trtcheck/: __init__.py  __main__.py  _graph.py  _text.py  analyzer.py  cli.py  plugins.py  remediation.py  runtime_verify.py  types.py
(+31 files in other folders)
